updated the style of Ni ipynb

--- a/optics/ni/nickel.ipynb
+++ b/optics/ni/nickel.ipynb
@@ -48,7 +48,7 @@
    "id": "dbb144e2-627d-4dc3-992e-a3ca80b048cb",
    "metadata": {},
    "source": [
-    "## <font color='fff223'> Калибровка</font>"
+    "## Калибровка"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "id": "11322af8-8c3d-4c2f-85d2-2268c16ea224",
    "metadata": {},
    "source": [
-    "### <font color='fff223'> Дифференциальная </font>"
+    "### Дифференциальная"
    ]
   },
   {
@@ -218,9 +218,7 @@
    "source": [
     "m_steel_1 = np.float64(0.18189 - 0.13448)\n",
     "m_steel_2 = np.float64(0.18305 - 0.13459)\n",
-    "V_exer_flask = 100.0\n",
-    "V_aliq_1 = 20.00\n",
-    "V_exer_flask_pr = 100.0"
+    "V_aliq_1 = 20.00"
    ]
   },
   {
@@ -260,7 +258,7 @@
     }
    ],
    "source": [
-    "f_1(A_1, slope_cal, intercept_cal)*V_exer_flask_pr/V_aliq_1*V_exer_flask/(m_steel_1*1000)*100"
+    "f_1(A_1, slope_cal, intercept_cal)*V_flask/V_aliq_1*V_flask/(m_steel_1*1000)*100"
    ]
   },
   {
@@ -289,7 +287,7 @@
     }
    ],
    "source": [
-    "f_1(A_2, slope_cal, intercept_cal)*V_exer_flask_pr/V_aliq_1*V_exer_flask/(m_steel_2*1000)*100"
+    "f_1(A_2, slope_cal, intercept_cal)*V_flask/V_aliq_1*V_flask/(m_steel_2*1000)*100"
    ]
   },
   {
@@ -337,7 +335,7 @@
     }
    ],
    "source": [
-    "f_1(A_1_dif, slope_dif_cal, intercept_dif_cal)*V_exer_flask_pr/V_aliq_1*V_exer_flask/(m_steel_1*1000)*100"
+    "f_1(A_1_dif, slope_dif_cal, intercept_dif_cal)*V_flask/V_aliq_1*V_flask/(m_steel_1*1000)*100"
    ]
   },
   {
@@ -366,7 +364,7 @@
     }
    ],
    "source": [
-    "f_1(A_2_dif, slope_dif_cal, intercept_dif_cal)*V_exer_flask_pr/V_aliq_1*V_exer_flask/(m_steel_2*1000)*100"
+    "f_1(A_2_dif, slope_dif_cal, intercept_dif_cal)*V_flask/V_aliq_1*V_flask/(m_steel_2*1000)*100"
    ]
   }
  ],
