updated Ni ipynb to look better

--- a/optics/ni/nickel.ipynb
+++ b/optics/ni/nickel.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "float_formatter = \"{:.2f}\".format\n",
     "def f(X, A, B):\n",
     "    '''\n",
     "    Y = AX + B\n",
@@ -71,7 +72,7 @@
    "id": "0777f6a1-4ffb-4ef1-9e97-a90ae23c62dd",
    "metadata": {},
    "source": [
-    "### <font color='fff223'> Недифференциальная </font>"
+    "### Недифференциальная"
    ]
   },
   {
@@ -247,18 +248,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9.304210288366619"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.30%\n"
+     ]
     }
    ],
    "source": [
-    "f_1(A_1, slope_cal, intercept_cal)*V_flask/V_aliq_1*V_flask/(m_steel_1*1000)*100"
+    "print(float_formatter(f_1(A_1, slope_cal,\n",
+    "                    intercept_cal)*V_flask/V_aliq_1*V_flask/(m_steel_1*1000)*100)+'%')"
    ]
   },
   {
@@ -276,18 +275,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9.06109358012065"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.06%\n"
+     ]
     }
    ],
    "source": [
-    "f_1(A_2, slope_cal, intercept_cal)*V_flask/V_aliq_1*V_flask/(m_steel_2*1000)*100"
+    "print(float_formatter(f_1(A_2, slope_cal,\n",
+    "                    intercept_cal)*V_flask/V_aliq_1*V_flask/(m_steel_2*1000)*100)+'%')"
    ]
   },
   {
@@ -324,18 +321,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9.522174119648353"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.52%\n"
+     ]
     }
    ],
    "source": [
-    "f_1(A_1_dif, slope_dif_cal, intercept_dif_cal)*V_flask/V_aliq_1*V_flask/(m_steel_1*1000)*100"
+    "print(float_formatter(f_1(A_1_dif, slope_dif_cal,\n",
+    "                    intercept_dif_cal)*V_flask/V_aliq_1*V_flask/(m_steel_1*1000)*100)+'%')"
    ]
   },
   {
@@ -343,7 +338,7 @@
    "id": "bd428312-d758-4844-8a2a-4b1546f74696",
    "metadata": {},
    "source": [
-    "Массовая доля никеля о второй пробе дифференциальным методом"
+    "Массовая доля никеля во второй пробе дифференциальным методом"
    ]
   },
   {
@@ -353,18 +348,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9.527018649748745"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.53%\n"
+     ]
     }
    ],
    "source": [
-    "f_1(A_2_dif, slope_dif_cal, intercept_dif_cal)*V_flask/V_aliq_1*V_flask/(m_steel_2*1000)*100"
+    "print(float_formatter((f_1(A_2_dif, slope_dif_cal,\n",
+    "                     intercept_dif_cal)*V_flask/V_aliq_1*V_flask/(m_steel_2*1000)*100))+'%')"
    ]
   }
  ],
