updated atomnik 6.1, optics fe and ti

--- a/atomnik/6.1/plotting.ipynb
+++ b/atomnik/6.1/plotting.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75d0d860-a8f1-45c1-b8d4-642d886bb6bd",
+   "metadata": {},
+   "source": [
+    "# СТМ"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "71a40a69-9509-488a-86fa-eb1105150d84",
    "metadata": {},
    "outputs": [],
@@ -12,12 +20,13 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import pandas as pd\n",
     "from scipy.interpolate import griddata\n",
+    "from scipy.stats import tstd\n",
     "%matplotlib widget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8d6217cc-8943-4930-929e-5455433f75af",
    "metadata": {},
    "outputs": [],
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "f6cf8e9c-1525-453c-9715-bc967eb119dc",
    "metadata": {},
    "outputs": [],
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "386dffbe-1cea-46b3-b78f-94fe05b7effa",
    "metadata": {},
    "outputs": [
@@ -157,7 +166,7 @@
        "[143640 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,19 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "98f3607b-3e3b-477c-8e36-8d770963bc6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df['x']\n",
-    "y = df['y']\n",
-    "z = df['z']\n",
+    "x = df['x'].values\n",
+    "y = df['y'].values\n",
+    "z = df['z'].values\n",
+    "\n",
     "indices = [i for i in range(1,140000, 100)]\n",
     "x = x[indices]\n",
     "y = y[indices]\n",
-    "z = z[indices]\n",
-    "z = z"
+    "z = z[indices]"
    ]
   },
   {
@@ -264,11 +273,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b1c9a122-e2b1-4dca-ad5e-0476a2d06010",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7548000000000001"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "samp = np.array([0.745, 0.741, 0.763, 0.760, 0.765])\n",
+    "np.average(samp)"
+   ]
   }
  ],
  "metadata": {
