--- a/atomnik/6.1/plotting.ipynb
+++ b/atomnik/6.1/plotting.ipynb
@@ -203,7 +203,32 @@
     "ndots = 1000\n",
     "xi = np.linspace(np.min(x), np.max(x), ndots)\n",
     "yi = np.linspace(np.min(y), np.max(y), ndots)\n",
-    "xi, yi = np.meshgrid(xi, yi)\n",
+    "xi, yi = np.meshgrid(xi, yi)реimport numpy as np\n",
+    "from random import random\n",
+    "\n",
+    "def generate_path(num_of_dots, scale, time_lim):\n",
+    "    # Initialize the path with the first point at (0, 0, 0)\n",
+    "    path = np.zeros((num_of_dots, 3))\n",
+    "    \n",
+    "    for i in range(1, num_of_dots):\n",
+    "        # Generate random increments for x and y\n",
+    "        delta_x = (random() - 0.5) * scale\n",
+    "        delta_y = random() * (random() - 0.5) * scale\n",
+    "        # Ensure z increases uniformly\n",
+    "        delta_z = time_lim / num_of_dots\n",
+    "\n",
+    "        # Add the increments to the previous point\n",
+    "        path[i] = path[i - 1] + np.array([delta_x, delta_y, delta_z])\n",
+    "\n",
+    "    return path\n",
+    "\n",
+    "# Example usage\n",
+    "num_of_dots = 100\n",
+    "scale = 1.0\n",
+    "time_lim = 10\n",
+    "path = generate_path(num_of_dots, scale, time_lim)\n",
+    "print(path)\n",
+    "\n",
     "zi = griddata((x, y), z, (xi, yi), method='cubic')"
    ]
   },
@@ -310,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
