edited cr-mn and added a draft for si

--- a/optics/cr_mn/cr-mn.ipynb
+++ b/optics/cr_mn/cr-mn.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "0076af72-f29f-42b0-a640-30093e1ffe9f",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "ccbea110-b0e9-4be5-a25b-80a8351d4022",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "Text(0, 0.5, 'Absorbance, a.u.')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "b0f511bd-c3f1-41b8-9a6b-b92bd972f52a",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "Text(0, 0.5, 'Absorbance, a.u.')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "08d14822-d12e-4904-929b-23b7df8a001f",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "Text(0, 0.5, 'Absorbance, a.u.')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "19ab6355-25c2-4dcd-b543-f69bf0210050",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "b333c885-5cb2-42b8-8d63-cc6a5bc7a35f",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "Text(0, 0.5, 'Absorbance, a.u.')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "40ae7beb-ca63-4a93-8390-c17a2eb4f57b",
    "metadata": {},
    "outputs": [],
@@ -369,17 +369,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "d1857707-4a42-42bb-a334-474b010a59f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5592cc3140>"
+       "<matplotlib.legend.Legend at 0x7fd36dbabf80>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "c4483492-b3fd-4e52-ac0e-1ff845e79d2d",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "8da63fc5-b581-40bd-8fac-4a716fe15cf2",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "83062540-b070-44da-91fe-e723000c431c",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "3b70a321-82cb-4813-9f4f-36dc0b955dd1",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "(400.0, 475.0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "2a4b4614-162b-4366-91a7-a233c763b3d5",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "eb085338-883f-46b1-bcea-9689d2c5f412",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "Text(0, 0.5, 'Absorbance, a.u.')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "d120a75e-e6ce-4847-92d8-fedd6bf9abdc",
    "metadata": {},
    "outputs": [],
@@ -613,17 +613,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "bfef1dd3-b419-4861-9075-3b2191f0e953",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5592b57470>]"
+       "[<matplotlib.lines.Line2D at 0x7fd3c3f3d370>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "5da6f5a8-5fd6-4186-8af3-5a332237ec47",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "286598fb-973a-484e-a34b-0186dd79c5a5",
    "metadata": {},
    "outputs": [],
@@ -713,17 +713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "c34495bf-908d-426a-9919-d35ae294640b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f559082f9b0>"
+       "<matplotlib.legend.Legend at 0x7fd36da493a0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "45ae57f5-c752-44cc-b629-2a490a480b2b",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "id": "cad3ca2c-a590-4b9c-acc4-49fe3c7e2836",
    "metadata": {},
    "outputs": [],
@@ -811,17 +811,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "9e20cd94-0f58-4f2c-bf58-25525c732cfc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5592da8a40>"
+       "<matplotlib.legend.Legend at 0x7fd36da3dee0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "393aaf8e-daa0-4e6c-86c2-3fe0c0a6df13",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "c8a25c92-bf01-45ba-8e2b-712563242e2e",
    "metadata": {},
    "outputs": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "id": "f318b328-20a5-49f7-bf93-a92f88977c62",
    "metadata": {},
    "outputs": [],
@@ -954,13 +954,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "id": "06dcde61-e9bb-4101-83e2-4b4697065717",
    "metadata": {},
    "outputs": [],
    "source": [
     "l = 0.98\n",
-    "Matr = np.array([[eps_cr_445, eps_mn_445_1cm], [0, eps_mn_545_1cm]])\n",
+    "Matr = np.array([[eps_cr_445, eps_mn_445_5cm], [0, eps_mn_545_1cm]])\n",
     "Vec = np.array([A_ex1_1cm_445 / l, A_ex1_1cm_545 / l])\n",
     "c_cr = solve(Matr, Vec)[0]\n",
     "c_mn = solve(Matr, Vec)[1]"
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "id": "8e9b921b-e631-43a8-9046-a0b0b9ce25e7",
    "metadata": {},
    "outputs": [],
@@ -986,17 +986,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "id": "ae557b63-4112-48e3-9453-5a8b81016afb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.02741149, 0.03159588])"
+       "array([0.02832343, 0.03159588])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,17 +1007,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "id": "42e600c2-f83b-414f-8d6e-663a634a1b40",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.81744823, 3.4312773 ])"
+       "array([2.91118068, 3.4312773 ])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,13 +1039,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "af43f4f3-3e7b-4762-a87e-51defcf73bc9",
    "metadata": {},
    "outputs": [],
    "source": [
     "l = 0.98\n",
-    "Matr = np.array([[eps_cr_445, eps_mn_445_1cm], [0, eps_mn_545_1cm]])\n",
+    "Matr = np.array([[eps_cr_445, eps_mn_445_5cm], [0, eps_mn_545_1cm]])\n",
     "Vec = np.array([A_ex2_1cm_445 / l, A_ex2_1cm_545 / l])\n",
     "c_cr = solve(Matr, Vec)[0]\n",
     "c_mn = solve(Matr, Vec)[1]"
@@ -1053,17 +1053,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "id": "2c91467b-6217-44b0-8592-61bc22da615d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.10699854, 3.12624299])"
+       "array([2.19239834, 3.12624299])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,16 +1085,16 @@
    "metadata": {},
    "source": [
     "Получили\n",
-    "| Номер задачи | $w_{Mn},\\%$ | $w_{Cr},\\%$ |\n",
+    "| Номер задачи | $w_{Cr},\\%$ | $w_{Mn},\\%$ |\n",
     "|-------|-----|-----|\n",
-    "| 1| 2.8 | 3.4 |\n",
-    "| 2| 2.1 | 3.1 |"
+    "| 1| 2.9 | 3.4 |\n",
+    "| 2| 2.2 | 3.1 |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b855850-b73c-4681-999f-82d19f64e9c2",
+   "id": "c773834f-74f5-4793-9302-59661b548cff",
    "metadata": {},
    "outputs": [],
    "source": []
