--- a/thermod/С-3/doc.tex
+++ b/thermod/С-3/doc.tex
@@ -163,6 +163,6 @@
 \pagebreak
 \section{Литература}
 \begin{itemize}
-	\item Краткий справочник физикл-химических величин (\textit{под ред. Равделя})
+	\item Краткий справочник физико-химических величин (\textit{под ред. Равделя})
 \end{itemize}
 \end{document}
