completed optics lab work course with a score of 990/~1100 points (ti spoiled everything)

--- a/optics/ti/titan.ipynb
+++ b/optics/ti/titan.ipynb
@@ -161,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7fd073306690>"
+       "<matplotlib.lines.Line2D at 0x7f4e09f27290>"
       ]
      },
      "execution_count": 7,
@@ -316,17 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6a3bc4e4-3393-43f9-b9ad-27f6d1a098ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.79767899, 4.32932682])"
+       "array([1.25, 2.5 , 3.75, 5.  , 6.25, 7.5 , 8.75])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -351,7 +351,8 @@
     "plt.xlabel('c, mg/ml')\n",
     "plt.ylabel('A, a.u.')\n",
     "m_ti = c_ex * 250\n",
-    "m_ti"
+    "m_cal = c_cal * 250\n",
+    "m_cal"
    ]
   },
   {
@@ -365,24 +366,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "b060ef4d-3b05-4bb9-bee8-7cd5881fa5b3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Examined percentage is 3.8616776514237063 %\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1.11160516, 1.11497636])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_mass = np.array([0.25595 - 0.14350, 0.25570 - 0.14359]) * 1000\n",
+    "sample_mass = np.array([0.25594 - 0.14350, 0.25570 - 0.14359]) * 1000\n",
     "\n",
     "percent = m_ti / sample_mass * 100\n",
-    "print(f'Examined percentage is {percent[1]} %')"
+    "percent_cal = m_cal[0] / sample_mass * 100\n",
+    "percent_cal\n",
+    "#print(f'Examined percentage is {percent[1]} %')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f05b5c14-95f8-404a-87a4-85d0d1c0f06f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00319072, 0.01731731])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_ex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ace1a69-846b-4b2a-8d8d-56b22f3d1703",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
